Fixed wrong margin for overlay-content, added width and height to 100% for .overlay

--- a/fig-gallery.css
+++ b/fig-gallery.css
@@ -82,6 +82,8 @@
 
 .gallery.open .overlay[open],
 .gallery.open .overlay.open {
+    width: 100%;
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
     opacity: 1;
@@ -94,7 +96,7 @@
     max-height: 95%;
     min-width: 100px;
     min-height: 100px;
-    margin: 5%;
+    margin: 2.5%;
     box-sizing: border-box;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
